--- a/JSON/components.json
+++ b/JSON/components.json
@@ -1,1 +1,8 @@
-{"\u0441\u043c\u0438\u0442 \u043c\u0438\u0442": 210.0, "\u0430\u0440\u043e\u043c\u0430\u0442\u0438\u0437\u0430\u0442\u043e\u0440 \u041e\u0440\u0445\u0438\u0434\u0435\u044f \u0438 \u0448\u0435\u043b\u043a": 1700.0, "\u0432\u043e\u0434\u0430": 0.0}
+{
+  "component": {
+    "name": "",
+    "mass": 0,
+    "min_mass": 0,
+    "cost": 0
+  }
+}
